#pragma once

#include "SGA_Shader.hpp"

class SGA_FragmentShader: public SGA_Shader {
public:
   SGA_FragmentShader(const char* shaderPath);

protected:
   void abstract();
};
